db connection
compile errors

some more work
yml page fix

linting

Temporarily disabling tests

EUI-1028 fix
